2009-08-06  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/PreferencesUI/UIxPreferences.m ([UIxPreferences
	-defaultAction]): if the compose message type (HTML or plain text)
	has changed, reload the page (don't close it). This is a fix for a
	bug with disabling or enabling the CKEDITOR dynamically (in JavaScript).

2009-08-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m (-davSyncCollection): enhanced to
	return a DAV error with the "valid-sync-token" condition tag when
	a token is provided while the collection is empty.

	* SoObjects/SOGo/WOResponse+SOGo.m: new class module.
	(-appendDAVError:): utility method that adds and formats the XML
	body of a DAV error, with the error condition passed as argument.

2009-08-05  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Added missing files for Hungarian translation
	* Fixed the reply / forward ops for many translations

2009-08-03  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Dropped the current caching subsystem based on
	GNUstep's DO and replaced it with memcached. This
	is much more efficient and scalable than DO and will
	also prevent obscure libffi/libffcall crashes on
	various platforms.

2009-08-03  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Scheduler/UIxCalView.m ([UIxCalView -setCurrentView:]): avoid
	writing the user defaults if the current view hasn't change.

2009-07-29  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-hasAttendees]): new method used to show organizer only if the event
	has attenddes (read-only view).

	* UI/Scheduler/UIxTaskEditor.m ([UIxTaskEditor
	-taskStartDateTimeText]): new method to return a localized
	description of the start date and time.
	([UIxTasEditor -taskDueDateTimeText]): idem for the due date and
	time.
	([UIxTaskEditor -statusDateText]): idem for the status (task
	completed) date.

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor -reply]):